src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CZ_Gift__c</fullName>
        <label>Gift</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPL_Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ERPL_Additional_Phone__c</fullName>
        <label>Additional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ERPL_Date_of_information_obligation__c</fullName>
        <label>Date of information obligation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERPL_Information_Obligation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Obligation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERPL_Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ER_Account_SubSource__c</fullName>
        <label>Account Sub-Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adwords: Google, Bing</fullName>
                </value>
                <value>
                    <fullName>Other adwords</fullName>
                </value>
                <value>
                    <fullName>Lead provider</fullName>
                </value>
                <value>
                    <fullName>Public Register - list of existing companies</fullName>
                </value>
                <value>
                    <fullName>Public Register - list of new created companies</fullName>
                </value>
                <value>
                    <fullName>Abandonned contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Webform</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Also_Client_Merchant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Also Client/Merchant ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_BUPicklist__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Brands__c</fullName>
        <label>Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Email_Opt_Out__c</fullName>
        <formula>IF(PersonHasOptedOutOfEmail=true,IMAGE(&apos;/resource/ER_Email_Opt_Out&apos;,&apos;ER_Email_Opt_Out&apos;,40,40),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_National_ID_Number__c</fullName>
        <label>National ID Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Portal_username__c</fullName>
        <label>Portal username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Portal_last_connection__c</fullName>
        <label>Portal last connection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the unique identifier of the customer on Middle Office side. It is used to link a Salesforce record with a Middle Office record</inlineHelpText>
        <label>Card Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Client_Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client / Merchant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Client / Merchant)</relationshipLabel>
        <relationshipName>Client_Merchant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Beneficiary, reference the Client on the beneficary</description>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Users</relationshipLabel>
        <relationshipName>UserClient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Creation_date_in_OS__c</fullName>
        <description>Use as a reference for EDG data creation</description>
        <label>Creation date in OS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Edenred_Portal_creation_date__c</fullName>
        <label>Edenred Portal creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>ER_Employee__c</referenceTo>
        <relationshipLabel>Individual</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Enterprise_Number__c</fullName>
        <label>Enterprise Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ER_Global_Segmentation__c</fullName>
        <label>Global Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Food chains</fullName>
                </value>
                <value>
                    <fullName>Fuel retailers</fullName>
                </value>
                <value>
                    <fullName>Large grocery retail</fullName>
                </value>
                <value>
                    <fullName>Market places (and-or aggregators)</fullName>
                </value>
                <value>
                    <fullName>Non food Retail</fullName>
                </value>
                <value>
                    <fullName>Non food services</fullName>
                </value>
                <value>
                    <fullName>Oil Companies</fullName>
                </value>
                <value>
                    <fullName>Other grocery retail</fullName>
                </value>
                <value>
                    <fullName>Others F&amp;M</fullName>
                </value>
                <value>
                    <fullName>Repair workshops</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                </value>
                <value>
                    <fullName>Toll operators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Group_Subsidiary_relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group/Subsidiary relationship</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Group Brand</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Subsidiary Brand</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Merchant</relationshipLabel>
        <relationshipName>Related_Merchant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transformation of Company - noticed by Merchant</fullName>
                </value>
                <value>
                    <fullName>Termination of Merchant activities - no written notice</fullName>
                </value>
                <value>
                    <fullName>Termination of Merchant activities - noticed</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - by Merchant</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - by Edenred</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - Legal reasons</fullName>
                </value>
                <value>
                    <fullName>Operation ceased</fullName>
                </value>
                <value>
                    <fullName>No interest</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bankrupt</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Insolvency_Executed_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insolvency/Executed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_LastModifiedBy__c</fullName>
        <formula>IF ( DATEVALUE(LastModifiedDate) &gt;= DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1)
            +
            ( 14 - CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7) ,
            0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7))
            )

            &amp;&amp;

            DATEVALUE(LastModifiedDate) &lt; DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) +
            (
            7-
            CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7) ,
            0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7))
            ),

            /*check if the last modified by is filled */
            IF(ER_Last_Modified_By_Functional_user__c != null, 

            /* if true */

            HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_420)) + 
            &apos;/lightning/r/User/&apos; + ER_Last_Modified_By_Functional_user__c + &apos;/view&apos;,ER_Last_Modified_By_Functional_user__r.FirstName  + &apos; &apos; + ER_Last_Modified_By_Functional_user__r.LastName) +  &apos;, &apos; + 
            TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;/&apos; +  
            TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;/&apos; + 
            TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos; &apos; +  
            TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;:&apos; +  
            TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))), 

            /* else */
            &apos;&apos;) 

            ,


            /*check if the last modified by is filled */
            IF(ER_Last_Modified_By_Functional_user__c != null, 

            /* if true */

            HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_420)) + 
            &apos;/lightning/r/User/&apos; + ER_Last_Modified_By_Functional_user__c + &apos;/view&apos;,ER_Last_Modified_By_Functional_user__r.FirstName + &apos; &apos; + ER_Last_Modified_By_Functional_user__r.LastName) +  &apos;, &apos; + 
            TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;/&apos; +  
            TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;/&apos; + 
            TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos; &apos; +  
            TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;:&apos; +  
            TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))), 

            /* else */
            &apos;&apos;)

            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Functional User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Last_Modified_By_Functional_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Modified by a functional user</description>
        <label>Last Modified By Functional user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Last_Modified_Date_Functional_User__c</fullName>
        <label>Last Modified Date Functional User</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Last_Transaction_date__c</fullName>
        <label>Last Transaction date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Last_date_of_Sync__c</fullName>
        <description>which hold the latest date/time when info was sent to the OS</description>
        <label>Last date of Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Form__c</fullName>
        <description>Legal form of the company</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Local_Merchant_Segmentation__c</fullName>
        <label>Local Merchant Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Big retail chains</fullName>
                </value>
                <value>
                    <fullName>Global brands</fullName>
                </value>
                <value>
                    <fullName>Independent restaurants</fullName>
                </value>
                <value>
                    <fullName>Independent food stores</fullName>
                </value>
                <value>
                    <fullName>e-Merchants</fullName>
                </value>
                <value>
                    <fullName>Other merchants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Match_Legal_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Legal to Head Office address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Merchant_coverage__c</fullName>
        <label>Merchant coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Multi-Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Monthly_redemption_volume__c</fullName>
        <label>Monthly redemption volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_MyEdenred_acceptance_date__c</fullName>
        <label>MyEdenred acceptance date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_NACE__c</fullName>
        <label>NACE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_NaceList__c</fullName>
        <label>Nace List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ER_NaceNameList__c</fullName>
        <label>Nace Name List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ER_Not_subject_to_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For customers that are not subject to VAT</description>
        <label>Not subject to VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Number_of_stores__c</fullName>
        <label>Number of stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Number_of_transactions__c</fullName>
        <label>Number of transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_Old_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to link an account to a former account following a change in VAT / company registration number</description>
        <label>Old Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Old Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Opt_In_Date__c</fullName>
        <label>Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Other_Fiscal_ID__c</fullName>
        <label>Other Fiscal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Other_Relationship__c</fullName>
        <label>Other Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Independant</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Paper_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Paper Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Portal_Status__c</fullName>
        <label>Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Publish_Unpublish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish/Unpublish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Revenues_monthly__c</fullName>
        <label>Revenues monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_Segment__c</fullName>
        <label>Local Client Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small merchants</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>LNA</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>LNA_KAM_001</fullName>
                </value>
                <value>
                    <fullName>LNA_KAM_002</fullName>
                </value>
                <value>
                    <fullName>LNA_KAM_003</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_BB</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_BA1</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_NR</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_TT</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_BA2</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_KE</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_PO</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_ZA</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_BA3</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_BA4</fullName>
                </value>
                <value>
                    <fullName>MSM_FSL_TN</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_TN1</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_KE</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_TT</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_NR</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_PO</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_BB</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_TT2</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_ZA</fullName>
                </value>
                <value>
                    <fullName>SME_BRA_TN2</fullName>
                </value>
                <value>
                    <fullName>SME_OTH_001</fullName>
                </value>
                <value>
                    <fullName>SME_TLS_001</fullName>
                </value>
                <value>
                    <fullName>SME_TLS_002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>No potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Sync_result__c</fullName>
        <label>Sync result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Take_up_rate__c</fullName>
        <label>Take up rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ER_VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_VIPLogo__c</fullName>
        <formula>IF(ER_VIP__c=true,IMAGE(&apos;/resource/VIPFlag&apos;,&apos;VIPLogo&apos;,30,30),&quot;&quot;)</formula>
        <label>VIPLogo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_WS_result_Text__c</fullName>
        <label>Sync Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_WS_result__c</fullName>
        <formula>CASE(ER_Sync_result__c, 
                &quot;1&quot;, IMAGE(&quot;/resource/SRER01_WebServiceHandler/Success_Img.png&quot;, &quot;Success&quot;,40,40), 
                &quot;2&quot;, IMAGE(&quot;/resource/SRER01_WebServiceHandler/Error_Img.png&quot;, &quot;Error&quot;,40,40),
                &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_YTD_Revenues__c</fullName>
        <label>YTD Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_YTD_redemption_volume__c</fullName>
        <label>YTD redemption volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HU_HQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head Office Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_AC_User__c</fullName>
        <label>AC User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Account_Address__c</fullName>
        <formula>IT_Toponym__c &amp; &quot; &quot; &amp; BillingStreet  &amp; BR() &amp;
BillingCity &amp; &quot; &quot; &amp;IT_Additional_Locality__c  &amp; BR() &amp;
BillingPostalCode &amp; &quot; &quot; &amp; BillingState</formula>
        <label>Legal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Additional_Locality__c</fullName>
        <label>Additional Locality</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Address_AC_User__c</fullName>
        <label>Address AC User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Address_Editing_Type__c</fullName>
        <label>Address Editing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Address_Validity_End_Date__c</fullName>
        <label>Address Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Address_Validity_Start_Date__c</fullName>
        <label>Address Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Change_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Change_VAT_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change VAT Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_City_Code__c</fullName>
        <label>City Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Cluster__c</fullName>
        <formula>Case ( TEXT(ER_Segment__c) , 
&quot;S&quot;,IMAGE(&quot;/resource/ClusterSuperA&quot;,&quot;SuperA&quot;), 
&quot;A&quot;,IMAGE(&quot;/resource/ClusterA&quot;,&quot;A&quot;), 
&quot;B&quot;,IMAGE(&quot;/resource/ClusterB&quot;,&quot;B&quot;), 
&quot;C&quot;,IMAGE(&quot;/resource/ClusterC&quot;,&quot;C&quot;), 
&quot;D&quot;,IMAGE(&quot;/resource/ClusterD&quot;,&quot;D&quot;), 
&quot;&quot; 
)
&amp; &quot; &quot; &amp;
Case ( TEXT(IT_Initiative__c) ,
&quot;D/C&quot;, IMAGE(&quot;/resource/PRICING_SC&quot;, &quot;Percent&quot;, 18,18),
&quot;Delivery&quot;, IMAGE(&quot;/resource/PRICING_SS&quot;, &quot;Delivery&quot;, 18,18),
&quot;&quot;)

&amp; &quot; &quot; &amp;

IF(
OR(
ISPICKVAL(ER_Segment__c, &apos;S&apos;),
IT_TOP__c
),
&apos;Red&apos;,
&apos;White&apos;
)</formula>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Institution</fullName>
                </value>
                <value>
                    <fullName>Private (work for Institution)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Display_VAT_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display VAT Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Extra_Urban_Specifications__c</fullName>
        <label>Extra-Urban Specifications</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center_Active__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center Active</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>